Se logro la conexion revision del codigo

--- a/Front/fincas.html
+++ b/Front/fincas.html
@@ -10,7 +10,7 @@
         }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="Javascript/funciones.js"></script>
+    <script type="text/javascript" src="funciones.js"></script>
 	<link rel="stylesheet" href="estilos.css">
 </head>
 <body>
