--- a/Front/Index.html
+++ b/Front/Index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Reto3</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="Javascript/backend.js"></script>
+    <script type="text/javascript" src="funciones.js"></script>
 	<link rel="stylesheet" href="estilos.css">
 </head>
 <body>
