--- a/Front/Index.html
+++ b/Front/Index.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Reto3</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="funciones.js"></script>
-	<link rel="stylesheet" href="estilos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Principal</title>
+
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/maquetado.css'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
 </head>
-<body>
-	<header class="header">
-		<div class="container">
-		<div class="btn-menu">
-			<label for="btn-menu">☰</label>
-		</div>
-			<div class="logo">
-				<h1>DeluxeFarms</h1>
-			</div>
-			<nav class="menu">
-				<a href="#">Inicio</a>
-				<a href="#">Nosotros</a>
-				<a href="#">Blog</a>
-				<a href="#">Contacto</a>
-			</nav>
-		</div>
-	</header>
-	<div class="capa"></div>
-<!--	--------------->
-<input type="checkbox" id="btn-menu">
-<div class="container-menu">
-	<div class="cont-menu">
-		<nav>
-			<a href="fincas.html">Fincas</a>
-			<a href="#">Clientes</a>
-			<a href="Categorias.html">Categorias</a>
-			<a href="#">Mensajes</a>
-			<a href="#">Reservaciones</a>
-		</nav>
-		<label for="btn-menu">✖️</label>
-	</div>
-</div>
+<body >
+    <div class="contenedor">   
+        <header class="menus" >            
+        </header >   
+        
+        <div class="titulo">
+            <h1>Busca tu confort</h1>
+        </div>
+        <div class="formulario"></div>
+        <div class="Listado"></div>
+        <div class="pie"></div>
+    </div>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/maquetado.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('.menus').load('./menu.html');
+        });
+    </script>
 </body>
+
 </html>
